# nextcloud-heic-webp-converter

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yaml
nextcloud_heic_converter/: main.py
nextcloud_heic_webp_converter/: main.py
