[tool.poetry]
name = "nextcloud-heic-webp-converter"
version = "0.1.0"
description = ""
authors = ["brennoflavio <contato@brennoflavio.com.br>"]
readme = "README.md"
packages = [{include = "nextcloud_heic_webp_converter"}]

[tool.poetry.dependencies]
python = "^3.10"
webdavclient3 = "^3.14.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
